# disclosure-search

./: .gitignore  README.md  main.py  pyproject.toml  test.py  xbrl.py  xrml_mining_test.py
disclosureModule/: acquireDisclosure.py  searchDisclosure.py  stockCodeGuarantee.py  unzipDisclosure.py
disclusureModule/: acquireDisclosure.py  searchDisclosure.py
src/disclosureModule/: searchDisclosure.py  stockCodeGuarantee.py  unzipDisclosure.py  wordCloudGenerator.py
src/disclosureSpecification/: inspection.py
src/wordCloudModule/: wordCloudConfig.py  wordCloudGenerator.py
