[tool.poetry]
name = "disclosure-search"
version = "0.1.0"
description = ""
authors = ["Hitomi Hatsukaze"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
lxml = "^4.6.4"
Janome = "^0.4.1"
wordcloud = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
